tests/NormalTests/paczka1/fuzzy1/43480119.err
Error in line 3: Rg4tE A853 51,1
Error in line 15: t54BjTSOfz S814 68,|
Error in line 9: XzqZ9zv S563 92,9
Error in line 22: XzqZ9zv S814 8,0
Error in line 17: t54BjTSOfz S814 250,0
